Added quote, author and tags functionality

--- a/Random Quote/index.html
+++ b/Random Quote/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <main>
-        <h3 id="author"></h3>
-        <div id="tags"></div>
-        <h2 id="quote"></h2>
+        <h3 id="authordom"></h3>
+        <div id="tagsdom"></div>
+        <p id="quotedom"></p>
     </main>
     <div class="buttons">
         <buton id="redo"><img src="resources/Regroup.svg" alt=""></buton>
