Styled buttons, Added clipboard functionality

--- a/Random Quote/index.html
+++ b/Random Quote/index.html
@@ -14,11 +14,11 @@
     <main>
         <h3 id="authordom"></h3>
         <div id="tagsdom"></div>
-        <p id="quotedom"></p>
+        <p id="quotedom" title=""></p>
     </main>
     <div class="buttons">
-        <buton id="redo"><img src="resources/Regroup.svg" alt=""></buton>
-        <buton><img src="resources/link.svg" alt=""></buton>
+        <button id="redo" class="button"><img src="resources/Regroup.svg" alt=""></button>
+        <button id="copy" class="button"><img src="resources/link.svg" alt=""></button>
     </div>
 </body>
 </html>
