--- a/Alarado Homepage/index.html
+++ b/Alarado Homepage/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4740d15410.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -20,6 +21,7 @@
                 <li class="option"><a href="">Contact</a></li>
             </ul>
         </nav>
+        <i class="fa-solid fa-bars"></i>
         <label for="theme" class="switch">
             <input type="checkbox" name="theme" id="theme">
             <img src="resources/Moon_fill_light.svg" alt="">
