no js theme switch base

--- a/Alarado Homepage/index.html
+++ b/Alarado Homepage/index.html
@@ -15,16 +15,22 @@
         <img src="resources/alarado-icon-homepage.svg" alt="">
         <nav>
             <ul>
+                <label for="menu">
+                    <i class="fa-solid fa-bars"></i>
+                    <input id="menu" type="checkbox">
+                    </input>
+                </label>
                 <li class="option"><a href="" class="selected">About us</a></li>
                 <li class="option"><a href="">Product</a></li>
                 <li class="option"><a href="">Resource</a></li>
                 <li class="option"><a href="">Contact</a></li>
             </ul>
         </nav>
-        <i class="fa-solid fa-bars"></i>
+        <input type="checkbox" name="theme" id="theme">
         <label for="theme" class="switch">
-            <input type="checkbox" name="theme" id="theme">
+            <span>.</span>
             <img src="resources/Moon_fill_light.svg" alt="">
+            <span>..</span>
             <img src="resources/Sun_fill.svg" alt="">
         </label>
         
@@ -35,7 +41,7 @@
             <h1>Actions for Accessibility in Design</h1>
             <p>The fastest way to build and deploy websites with resusable components.</p>
             <div class="buttons">
-                <button>GET STARTED</button>
+                <button class="start">GET STARTED</button>
                 <a href="">Get live demo</a>
             </div>
             <div class="perks">
